brinacnado com Header

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Site PSD</title>
 </head>
 <body>
+    <script src="https://kit.fontawesome.com/3ed0aaedc8.js" crossorigin="anonymous"></script>
     <header> 
         <div class="center">
             <div class="logo">
@@ -29,5 +30,41 @@
             </div>
         </div>
     </header>
+    <nav>
+        <div class="center">
+            <div class="nav-bar">
+                <div class="nav-single">
+                    Home
+                </div>
+                <div class="nav-single">
+                    About us
+                </div>
+                <div class="nav-single">
+                    Service
+                </div>
+                <div class="nav-single">
+                    Pages
+                </div>
+                <div class="nav-single">
+                    Blog
+                </div>
+                <div class="nav-single">
+                    Contact Us
+                </div> 
+            </div>
+            <div class="pesquisa">
+                <button>
+                    Search Something
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
+        </div>
+    </nav>
+    <div class="welcome">
+        <div class="slider-principal">
+            <img src="imagens/background.jpg" alt="">
+        </div>
+        
+    </div>
 </body>
 </html>
